--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-cdk/aws-rds": "^1.203.0",
     "@aws-cdk/aws-s3": "^1.203.0",
     "aws-cdk-lib": "^2.186.0",
+    "aws-sdk": "^2.1692.0",
     "constructs": "^10.4.2"
   }
 }
