--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
     "cdk:diff:dev": "npm run cdk:diff -- --profile cdk-deploy-dev -c env=dev",
     "cdk:deploy:dev": "npm run cdk:deploy -- --profile cdk-deploy-dev -c env=dev",
     "cdk:destroy:dev": "npm run cdk:destroy -- --profile cdk-deploy-dev -c env=dev",
+    "lint": "eslint . --ext .ts,.js",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.0",
     "@types/aws-lambda": "^8.10.149",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "aws-cdk": "2.1007.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.30.1"
   },
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.203.0",
