--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "cdk:diff": "cdk diff",
     "cdk:deploy": "cdk deploy",
     "cdk:destroy": "cdk destroy",
+    "cdk:synth": "cdk synth",
     "cdk:diff:dev": "npm run cdk:diff -- --profile cdk-deploy-dev -c env=dev",
     "cdk:deploy:dev": "npm run cdk:deploy -- --profile cdk-deploy-dev -c env=dev",
     "cdk:destroy:dev": "npm run cdk:destroy -- --profile cdk-deploy-dev -c env=dev",
+    "cdk:synth:dev": "npm run cdk:synth -- --profile cdk-deploy-dev -c env=dev",
     "lint": "eslint . --ext .ts,.js",
     "watch": "tsc -w",
+    "typecheck": "tsc --noEmit",
     "test": "jest",
     "cdk": "cdk"
   },
