--- a/.github/workflows/cdk-check.yml
+++ b/.github/workflows/cdk-check.yml
@@ -32,7 +32,7 @@ jobs:
         run: docker --version
 
       - name: CDK Synth
-        run: npx cdk synth --quiet
+        run: npm run cdk:synth:dev -- --all --quiet
 
       - name: Run unit tests
         run: npm test
