--- a/.github/workflows/cdk-check.yml
+++ b/.github/workflows/cdk-check.yml
@@ -35,4 +35,4 @@ jobs:
         run: npm run cdk:synth:dev -- --all --quiet
 
       - name: Run unit tests
-        run: npm test
+        run: npm run test
