--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint . --ext .ts,.js",
     "watch": "tsc -w",
     "typecheck": "tsc --noEmit",
-    "test": "jest",
+    "test": "node --max-old-space-size=4096 node_modules/.bin/jest",
     "cdk": "cdk"
   },
   "devDependencies": {
