--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint . --ext .ts,.js",
     "watch": "tsc -w",
     "typecheck": "tsc --noEmit",
+    "format": "prettier --write .",
     "test": "node --max-old-space-size=4096 node_modules/.bin/jest",
     "cdk": "cdk"
   },
@@ -29,8 +30,10 @@
     "@typescript-eslint/parser": "^8.30.1",
     "aws-cdk": "2.1007.0",
     "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
