--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "watch": "tsc -w",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
+    "prepare": "husky install",
     "test": "node --max-old-space-size=4096 node_modules/.bin/jest",
     "cdk": "cdk"
   },
@@ -32,7 +33,9 @@
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -48,5 +51,8 @@
     "aws-cdk-lib": "^2.186.0",
     "aws-sdk": "^2.1692.0",
     "constructs": "^10.4.2"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,jsx,tsx,json,css,md}": "prettier --write"
   }
 }
