fixes typo in instanceId import name

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "cdk:deploy": "cdk deploy",
     "cdk:destroy": "cdk destroy",
     "cdk:synth": "cdk synth",
-    "cdk:diff:dev": "npm run cdk:diff -- --profile cdk-deploy-dev -c env=dev",
-    "cdk:deploy:dev": "npm run cdk:deploy -- --profile cdk-deploy-dev -c env=dev",
-    "cdk:destroy:dev": "npm run cdk:destroy -- --profile cdk-deploy-dev -c env=dev",
-    "cdk:synth:dev": "npm run cdk:synth -- --profile cdk-deploy-dev -c env=dev",
+    "cdk:diff:dev": "npm run cdk:diff -- --profile cdk-deploy-dev -c env=dev --all",
+    "cdk:deploy:dev": "npm run cdk:deploy -- --profile cdk-deploy-dev --all --require-approval never -c env=dev",
+    "cdk:destroy:dev": "npm run cdk:destroy -- --profile cdk-deploy-dev --all -c env=dev",
+    "cdk:synth:dev": "npm run cdk:synth -- --profile cdk-deploy-dev --all -c env=dev",
     "lint": "eslint . --ext .ts,.js",
     "watch": "tsc -w",
     "typecheck": "tsc --noEmit",
