Adds scripts to package.json to run cdk command in ci

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "cdk:deploy": "cdk deploy",
     "cdk:destroy": "cdk destroy",
     "cdk:synth": "cdk synth",
+    "cdk:deploy:ci": "npm run cdk:deploy -- --all --require-approval never -c env=dev",
+    "cdk:diff:ci": "npm run cdk:diff -- --all -c env=dev",
+    "cdk:destroy:ci": "npm run cdk:destroy -- --all -c env=dev",
+    "cdk:synth:ci": "npm run cdk:synth -- --all --quiet -c env=dev",
     "cdk:diff:dev": "npm run cdk:diff -- --profile cdk-deploy-dev -c env=dev --all",
     "cdk:deploy:dev": "npm run cdk:deploy -- --profile cdk-deploy-dev --all --require-approval never -c env=dev",
     "cdk:destroy:dev": "npm run cdk:destroy -- --profile cdk-deploy-dev --all -c env=dev",
